WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275993
[web-animations] animation with a non-invertible matrix should not interpolate
https://bugs.webkit.org/show_bug.cgi?id=275993
Summary
[web-animations] animation with a non-invertible matrix should not interpolate
Antoine Quint
Reported
2024-06-28 08:16:18 PDT
In WebKit, animating `transform` with a non-invertible matrix yields an animation, but the spec says it should not per
https://drafts.csswg.org/css-transforms-1/#matrix-interpolation
: "If one of the matrices for interpolation is non-invertible, the used animation function must fall-back to a discrete animation according to the rules of the respective animation specification."
Attachments
CSS Transition test
(421 bytes, text/html)
2024-06-28 08:16 PDT
,
Antoine Quint
no flags
Details
CSS Animation test
(336 bytes, text/html)
2024-06-28 08:16 PDT
,
Antoine Quint
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2024-06-28 08:16:28 PDT
rdar://130704075
Antoine Quint
Comment 2
2024-06-28 08:16:44 PDT
Created
attachment 471764
[details]
CSS Transition test
Antoine Quint
Comment 3
2024-06-28 08:16:58 PDT
Created
attachment 471765
[details]
CSS Animation test
Antoine Quint
Comment 4
2024-06-28 08:41:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30273
Antoine Quint
Comment 5
2024-06-28 08:44:18 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/46932
EWS
Comment 6
2024-06-28 12:41:10 PDT
Committed
280466@main
(df87a56d78cc): <
https://commits.webkit.org/280466@main
> Reviewed commits have been landed. Closing PR #30273 and removing active labels.
Antoine Quint
Comment 7
2024-07-01 04:47:53 PDT
***
Bug 195790
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug